--- a/src/qt/pympvclient/mainwindow.ui
+++ b/src/qt/pympvclient/mainwindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>pympvremote</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout_3">
@@ -50,7 +50,7 @@
            </size>
           </property>
           <property name="currentIndex">
-           <number>0</number>
+           <number>1</number>
           </property>
           <widget class="QWidget" name="tabRemoteFiles">
            <attribute name="icon">
@@ -65,6 +65,9 @@
              <widget class="QListWidget" name="listWidgetRemoteFiles">
               <property name="editTriggers">
                <set>QAbstractItemView::DoubleClicked</set>
+              </property>
+              <property name="selectionMode">
+               <enum>QAbstractItemView::MultiSelection</enum>
               </property>
               <property name="sortingEnabled">
                <bool>true</bool>
@@ -245,6 +248,15 @@
             <height>180</height>
            </size>
           </property>
+          <property name="editTriggers">
+           <set>QAbstractItemView::NoEditTriggers</set>
+          </property>
+          <property name="dragEnabled">
+           <bool>true</bool>
+          </property>
+          <property name="selectionMode">
+           <enum>QAbstractItemView::SingleSelection</enum>
+          </property>
          </widget>
         </item>
        </layout>
@@ -272,15 +284,14 @@
    </attribute>
    <addaction name="actionStop"/>
    <addaction name="actionPause"/>
-   <addaction name="actionPlay"/>
    <addaction name="separator"/>
    <addaction name="actionPrevious"/>
    <addaction name="actionNext"/>
    <addaction name="separator"/>
    <addaction name="actionMute"/>
    <addaction name="actionFullscreen"/>
+   <addaction name="actionRepeat"/>
    <addaction name="separator"/>
-   <addaction name="actionRefreshFiles"/>
    <addaction name="actionStream"/>
    <addaction name="actionUpload"/>
    <addaction name="separator"/>
@@ -302,10 +313,12 @@
    <attribute name="toolBarBreak">
     <bool>false</bool>
    </attribute>
+   <addaction name="actionPlayPlaylist"/>
+   <addaction name="separator"/>
    <addaction name="actionAppend"/>
    <addaction name="actionRemove"/>
    <addaction name="separator"/>
-   <addaction name="actionRepeat"/>
+   <addaction name="actionRefreshFiles"/>
    <addaction name="separator"/>
    <addaction name="actionClear"/>
   </widget>
@@ -324,16 +337,16 @@
     <string>Pause Currently Playing Media</string>
    </property>
   </action>
-  <action name="actionPlay">
+  <action name="actionPlayPlaylist">
    <property name="icon">
     <iconset resource="resources.qrc">
      <normaloff>:/icons/assets/icons/play.svg</normaloff>:/icons/assets/icons/play.svg</iconset>
    </property>
    <property name="text">
-    <string>Play</string>
+    <string>PlayPlaylist</string>
    </property>
    <property name="toolTip">
-    <string>Play Current Item</string>
+    <string>Play Current Playlist</string>
    </property>
   </action>
   <action name="actionNext">
